index.html: agregar tabla colaboradores

--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
         <!-- Repositorios -->
 
         <!-- Colaboradores -->
-        
+        <table id="colabs" class="table">
+            <caption>Colaboradores</caption>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Usuario</th>
+                    <th>Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Ingrese sus datos aqui -->
+            </tbody>
+        </table>
         <!-- Formulario Contacto -->
 
         <!-- Redes sociales -->
