index.html: agregar tabla colaboradores
index.html: agregar colaborador C215714N

index.html: agregar colaborador Jesus

Agregar fila para Kadir Correa

--- a/index.html
+++ b/index.html
@@ -36,7 +36,34 @@
         <!-- Repositorios -->
 
         <!-- Colaboradores -->
-        
+        <table id="colabs" class="table">
+            <caption>Colaboradores</caption>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Usuario</th>
+                    <th>Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Cristian Racedo</td>
+                    <td>C215714N</td>
+                    <td>cristiandracedo@hotmail.com</td>
+                </tr>
+                <tr>
+                    <td>Jesus Lara Mendez</td>
+                    <td>GsusLara</td>
+                    <td>jelara99@gmail.com</td>
+                </tr>
+                <!-- Ingrese sus datos aqui -->
+		<tr>    
+		    <td>Kadir Correa</td>
+		    <td>234567</td>
+		    <td>kadircorrea@gmail.com</td>
+	        </tr>
+            </tbody>
+        </table>
         <!-- Formulario Contacto -->
 
         <!-- Redes sociales -->
