index.html: agregar colaborador C215714N

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td>Cristian Racedo</td>
+                    <td>C215714N</td>
+                    <td>cristiandracedo@hotmail.com</td>
+                </tr>
                 <!-- Ingrese sus datos aqui -->
             </tbody>
         </table>
