Agregar fila para Kadir Correa

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     <td>cristiandracedo@hotmail.com</td>
                 </tr>
                 <!-- Ingrese sus datos aqui -->
+		<tr>    
+		    <td>Kadir Correa</td>
+		    <td>234567</td>
+		    <td>kadircorrea@gmail.com</td>
+	        </tr>
             </tbody>
         </table>
         <!-- Formulario Contacto -->
