Actualizacion de la tabla de usuarios en INDEX

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     <td>C215714N</td>
                     <td>cristiandracedo@hotmail.com</td>
                 </tr>
+                <tr>
+                    <td>Toribio Junior Javier Felix</td>
+                    <td>wakamedia</td>
+                    <td>wakamediagroup@outlook.com</td>
+                </tr>
                 <!-- Ingrese sus datos aqui -->
             </tbody>
         </table>
