--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT Desarrollo Colaborativo</title>
     <!-- Estilos CSS -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
     <!-- Cabecera de Pagina -->
@@ -17,9 +18,30 @@
 
     </header>
     <!-- Navegacion -->
-    <nav id="nav">
-
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!-- Contenido Principal -->
     <main>
         <!-- Areas de GIT -->
@@ -56,13 +78,23 @@
                     <td>GsusLara</td>
                     <td>jelara99@gmail.com</td>
                 </tr>
+                <tr>
+                    <td>Toribio Junior Javier Felix</td>
+                    <td>wakamedia</td>
+                    <td>wakamediagroup@outlook.com</td>
+                </tr>
                 <!-- Ingrese sus datos aqui -->
-		<tr>    
-		    <td>Kadir Correa</td>
-		    <td>234567</td>
-		    <td>kadircorrea@gmail.com</td>
-	        </tr>
+                <tr>    
+                    <td>Kadir Correa</td>
+                    <td>234567</td>
+                    <td>kadircorrea@gmail.com</td>
+                </tr>
             </tbody>
+            <tr>
+                <th>Maite Benitez</th>
+                <th>bmai</th>
+                <th>benitezmaite@gmail.com</th>
+            </tr>
         </table>
         <!-- Formulario Contacto -->
 
@@ -72,6 +104,6 @@
 
     </footer>
     <!-- Logica JS -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
