index.html: agregar colaborador Jesus

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     <td>C215714N</td>
                     <td>cristiandracedo@hotmail.com</td>
                 </tr>
+                <tr>
+                    <td>Jesus Lara Mendez</td>
+                    <td>GsusLara</td>
+                    <td>jelara99@gmail.com</td>
+                </tr>
                 <!-- Ingrese sus datos aqui -->
             </tbody>
         </table>
