--- a/index.html
+++ b/index.html
@@ -140,8 +140,25 @@
         <footer id="footer">
             <!-- Mapa de Contacto -->
 
-            <!-- Repositorios -->
-
+            
+        <!-- Repositorios -->
+            <div class="social repo">
+                <a class="github" 
+                    href="https://github.com/c215714n/git-mj18"
+                    target="_blank"
+                    title="github">
+                </a>
+                <a class="gitlab" 
+                    href="https://gitlab.com/c215714n/git-mj18"
+                    target="_blank"
+                    title="gitlab">
+                </a>
+                <a class="bitbucket" 
+                    href="https://bitbucket.org/c215714n/git-mj18"
+                    target="_blank"
+                    title="bitbucket">
+                </a>
+            </div>
             <!-- Colaboradores -->
             <table id="colabs" class="table">
                 <caption>Colaboradores</caption>
