index/styles: agregar y organizar redes sociales

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 
           <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
               <div class="col d-flex flex-column align-items-start gap-2">
-                  <h3 class="fw-bold">Somos un equipo altamente capacitado de profesionales en el desarrollo de sitios web personalizados y soluciones digitales
-                      innovadoras</h3>
+                  <h3 class="fw-bold">Somos un equipo altamente capacitado de profesionales en el desarrollo de sitios web personalizados y soluciones digitales innovadoras</h3>
                   <p class="text-muted"> Nos enorgullece ofrecer un enfoque centrado en el cliente para cada proyecto, trabajando estrechamente con nuestros clientes para comprender sus necesidades y objetivos únicos..</p>
               </div>
 
@@ -142,7 +141,23 @@
       <!-- Mapa de Contacto -->
 
       <!-- Repositorios -->
-
+    <div class="social repo">
+        <a class="github" 
+            href="https://github.com/c215714n/git-mj18"
+            target="_blank"
+            title="github">
+        </a>
+        <a class="gitlab" 
+            href="https://gitlab.com/c215714n/git-mj18"
+            target="_blank"
+            title="gitlab">
+        </a>
+        <a class="bitbucket" 
+            href="https://bitbucket.org/c215714n/git-mj18"
+            target="_blank"
+            title="bitbucket">
+        </a>
+    </div>
       <!-- Colaboradores -->
       <table id="colabs" class="table">
           <caption>Colaboradores</caption>
