styles: definir apariencia botones repositorios

--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
         <a class="github" 
             href="https://github.com/c215714n/git-mj18"
             target="_blank"
-            title="github">
+            title="GitHub">
         </a>
         <a class="gitlab" 
             href="https://gitlab.com/c215714n/git-mj18"
             target="_blank"
-            title="gitlab">
+            title="GitLab">
         </a>
         <a class="bitbucket" 
             href="https://bitbucket.org/c215714n/git-mj18"
             target="_blank"
-            title="bitbucket">
+            title="BitBucket">
         </a>
     </div>
       <!-- Colaboradores -->
