--- a/index.html
+++ b/index.html
@@ -49,163 +49,168 @@
   </style>
 </head>
 <body>
-  <!-- Cabecera de Pagina -->
-  <header id="header">
-      <!-- Encabezado -->
+    <!-- Cabecera de Pagina -->
+    <header id="header">
+        <!-- Encabezado -->
 
-      <!-- Galeria -->
+        <!-- Galeria -->
 
-  </header>
-  <!-- Navegacion -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                  aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link disabled">Disabled</a>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </nav>
-  <!-- Contenido Principal -->
-  <main>
-      <div class="container px-4 py-5">
-          <h2 class="pb-2 border-bottom">Nuestros Servicios</h2>
+    </header>
+    <!-- Navegacion -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Contenido Principal -->
+    <main>
+        <div class="container px-4 py-5">
+            <h2 class="pb-2 border-bottom">Nuestros Servicios</h2>
 
-          <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
-              <div class="col d-flex flex-column align-items-start gap-2">
-                  <h3 class="fw-bold">Somos un equipo altamente capacitado de profesionales en el desarrollo de sitios web personalizados y soluciones digitales innovadoras</h3>
-                  <p class="text-muted"> Nos enorgullece ofrecer un enfoque centrado en el cliente para cada proyecto, trabajando estrechamente con nuestros clientes para comprender sus necesidades y objetivos únicos..</p>
-              </div>
+            <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+                <div class="col d-flex flex-column align-items-start gap-2">
+                    <h3 class="fw-bold">Somos un equipo altamente capacitado de profesionales en el desarrollo de sitios web personalizados y soluciones digitales innovadoras</h3>
+                    <p class="text-muted"> Nos enorgullece ofrecer un enfoque centrado en el cliente para cada proyecto, trabajando estrechamente con nuestros clientes para comprender sus necesidades y objetivos únicos..</p>
+                </div>
 
-              <div class="col">
-                  <div class="row row-cols-1 row-cols-sm-2 g-4">
-                      <div class="col d-flex flex-column gap-2">
-                          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-collection" viewBox="0 0 16 16">
-                                  <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z"/>
-                              </svg>
-                          </div>
-                          <h4 class="fw-semibold mb-0">Planificación </h4>
-                          <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
-                      </div>
+                <div class="col">
+                    <div class="row row-cols-1 row-cols-sm-2 g-4">
+                        <div class="col d-flex flex-column gap-2">
+                            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-collection" viewBox="0 0 16 16">
+                                    <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z"/>
+                                </svg>
+                            </div>
+                            <h4 class="fw-semibold mb-0">Planificación </h4>
+                            <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
 
-                      <div class="col d-flex flex-column gap-2">
-                          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                  <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                              </svg>
-                          </div>
-                          <h4 class="fw-semibold mb-0">Desarrollo Web</h4>
-                          <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
-                      </div>
+                        <div class="col d-flex flex-column gap-2">
+                            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                                    <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+                                </svg>
+                            </div>
+                            <h4 class="fw-semibold mb-0">Desarrollo Web</h4>
+                            <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
 
-                      <div class="col d-flex flex-column gap-2">
-                          <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-speedometer" viewBox="0 0 16 16">
-                                  <path d="M8 2a.5.5 0 0 1 .5.5V4a.5.5 0 0 1-1 0V2.5A.5.5 0 0 1 8 2zM3.732 3.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 8a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 8zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 7.31A.91.91 0 1 0 8.85 8.569l3.434-4.297a.389.389 0 0 0-.029-.518z"/>
-                                  <path fill-rule="evenodd" d="M6.664 15.889A8 8 0 1 1 9.336.11a8 8 0 0 1-2.672 15.78zm-4.665-4.283A11.945 11.945 0 0 1 8 10c2.186 0 4.236.585 6.001 1.606a7 7 0 1 0-12.002 0z"/>
-                              </svg>
-                          </div>
-                          <h4 class="fw-semibold mb-0">Marketing</h4>
-                          <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Areas de GIT -->
+                        <div class="col d-flex flex-column gap-2">
+                            <div class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-speedometer" viewBox="0 0 16 16">
+                                    <path d="M8 2a.5.5 0 0 1 .5.5V4a.5.5 0 0 1-1 0V2.5A.5.5 0 0 1 8 2zM3.732 3.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707zM2 8a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 8zm9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5zm.754-4.246a.389.389 0 0 0-.527-.02L7.547 7.31A.91.91 0 1 0 8.85 8.569l3.434-4.297a.389.389 0 0 0-.029-.518z"/>
+                                    <path fill-rule="evenodd" d="M6.664 15.889A8 8 0 1 1 9.336.11a8 8 0 0 1-2.672 15.78zm-4.665-4.283A11.945 11.945 0 0 1 8 10c2.186 0 4.236.585 6.001 1.606a7 7 0 1 0-12.002 0z"/>
+                                </svg>
+                            </div>
+                            <h4 class="fw-semibold mb-0">Marketing</h4>
+                            <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Areas de GIT -->
 
-      <!-- Apuntadores de GIT -->
+        <!-- Apuntadores de GIT -->
 
-      <!-- Control de Cambios -->
+        <!-- Control de Cambios -->
 
-  </main>
-  <!-- Pie de Pagina -->
-  <footer id="footer">
-      <!-- Mapa de Contacto -->
+    </main>
+    <!-- Pie de Pagina -->
+    <footer id="footer">
+        <!-- Mapa de Contacto -->
+        <iframe class="cover map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.070111678323!2d-58.37812478523344!3d-34.60238856493399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacc473596c3%3A0x568d6d5f7f1f535d!2sEducaci%C3%B3nIT!5e0!3m2!1ses-419!2sar!4v1677187122663!5m2!1ses-419!2sar" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    <button class="btn btn-light map icon-plus"></button>
+        <!-- Repositorios -->
+        <div class="social repo">
+            <a class="github" 
+                href="https://github.com/c215714n/git-mj18"
+                target="_blank"
+                title="GitHub">
+            </a>
+            <a class="gitlab" 
+                href="https://gitlab.com/c215714n/git-mj18"
+                target="_blank"
+                title="GitLab">
+            </a>
+            <a class="bitbucket" 
+                href="https://bitbucket.org/c215714n/git-mj18"
+                target="_blank"
+                title="BitBucket">
+            </a>
+        </div>
+        <!-- Colaboradores -->
+        <table id="colabs" class="table">
+            <caption>Colaboradores</caption>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Usuario</th>
+                    <th>Correo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Cristian Racedo</td>
+                    <td>C215714N</td>
+                    <td>cristiandracedo@hotmail.com</td>
+                </tr>
+                <tr>
+                    <td>Jesus Lara Mendez</td>
+                    <td>GsusLara</td>
+                    <td>jelara99@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Toribio Junior Javier Felix</td>
+                    <td>wakamedia</td>
+                    <td>wakamediagroup@outlook.com</td>
+                </tr>
+                <!-- Ingrese sus datos aqui -->
+                <tr>
+                    <td>Kadir Correa</td>
+                    <td>234567</td>
+                    <td>kadircorrea@gmail.com</td>
+                </tr>
+            </tbody>
+            <tr>
+                <th>Maite Benitez</th>
+                <th>bmai</th>
+                <th>benitezmaite@gmail.com</th>
+            </tr>
+        </table>
+        <!-- Formulario Contacto -->
 
-      <!-- Repositorios -->
-    <div class="social repo">
-        <a class="github" 
-            href="https://github.com/c215714n/git-mj18"
-            target="_blank"
-            title="GitHub">
-        </a>
-        <a class="gitlab" 
-            href="https://gitlab.com/c215714n/git-mj18"
-            target="_blank"
-            title="GitLab">
-        </a>
-        <a class="bitbucket" 
-            href="https://bitbucket.org/c215714n/git-mj18"
-            target="_blank"
-            title="BitBucket">
-        </a>
-    </div>
-      <!-- Colaboradores -->
-      <table id="colabs" class="table">
-          <caption>Colaboradores</caption>
-          <thead>
-              <tr>
-                  <th>Nombre</th>
-                  <th>Usuario</th>
-                  <th>Correo</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>Cristian Racedo</td>
-                  <td>C215714N</td>
-                  <td>cristiandracedo@hotmail.com</td>
-              </tr>
-              <tr>
-                  <td>Jesus Lara Mendez</td>
-                  <td>GsusLara</td>
-                  <td>jelara99@gmail.com</td>
-              </tr>
-              <tr>
-                  <td>Toribio Junior Javier Felix</td>
-                  <td>wakamedia</td>
-                  <td>wakamediagroup@outlook.com</td>
-              </tr>
-              <!-- Ingrese sus datos aqui -->
-              <tr>
-                  <td>Kadir Correa</td>
-                  <td>234567</td>
-                  <td>kadircorrea@gmail.com</td>
-              </tr>
-          </tbody>
-          <tr>
-              <th>Maite Benitez</th>
-              <th>bmai</th>
-              <th>benitezmaite@gmail.com</th>
-          </tr>
-      </table>
-      <!-- Formulario Contacto -->
+        <!-- Redes sociales -->
 
-      <!-- Redes sociales -->
+        <!-- Derechos de Autor -->
 
-      <!-- Derechos de Autor -->
-
-  </footer>
-  <!-- Logica JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    </footer>
+    <!-- Logica JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
