--- a/index.html
+++ b/index.html
@@ -129,46 +129,51 @@
                     </div>
                 </div>
             </div>
-            <!-- Areas de GIT -->
+        </div>
+        <!-- Areas de GIT -->
 
-            <!-- Apuntadores de GIT -->
+        <!-- Apuntadores de GIT -->
 
-            <!-- Control de Cambios -->
+        <!-- Control de Cambios -->
 
-        </main>
-        <!-- Pie de Pagina -->
-        <footer id="footer">
-            <!-- Mapa de Contacto -->
-
-            
+    </main>
+    <!-- Pie de Pagina -->
+    <footer id="footer">
+        <!-- Mapa de Contacto -->
+        <iframe class="cover map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.070111678323!2d-58.37812478523344!3d-34.60238856493399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacc473596c3%3A0x568d6d5f7f1f535d!2sEducaci%C3%B3nIT!5e0!3m2!1ses-419!2sar!4v1677187122663!5m2!1ses-419!2sar" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    <button class="btn btn-light map icon-plus"></button>
         <!-- Repositorios -->
-            <div class="social repo">
-                <a class="github" 
-                    href="https://github.com/c215714n/git-mj18"
-                    target="_blank"
-                    title="github">
-                </a>
-                <a class="gitlab" 
-                    href="https://gitlab.com/c215714n/git-mj18"
-                    target="_blank"
-                    title="gitlab">
-                </a>
-                <a class="bitbucket" 
-                    href="https://bitbucket.org/c215714n/git-mj18"
-                    target="_blank"
-                    title="bitbucket">
-                </a>
-            </div>
-            <!-- Colaboradores -->
-            <table id="colabs" class="table">
-                <caption>Colaboradores</caption>
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Usuario</th>
-                        <th>Correo</th>
-                    </tr>
-                </thead>
+        <div class="social repo">
+            <a class="github" 
+                href="https://github.com/c215714n/git-mj18"
+                target="_blank"
+                title="GitHub">
+            </a>
+            <a class="gitlab" 
+                href="https://gitlab.com/c215714n/git-mj18"
+                target="_blank"
+                title="GitLab">
+            </a>
+            <a class="bitbucket" 
+                href="https://bitbucket.org/c215714n/git-mj18"
+                target="_blank"
+                title="BitBucket">
+            </a>
+        </div>
+        <!-- Colaboradores -->
+        <table id="colabs" class="table">
+            <caption>Colaboradores</caption>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Usuario</th>
+                    <th>Correo</th>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
                     <td>Cristian Racedo</td>
@@ -207,5 +212,6 @@
     </footer>
     <!-- Logica JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
