index: Section Portfolio

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </nav>
   <!-- Contenido Principal -->
   <main>
-      <div class="container px-4 py-5">
+      <section class="container px-4 py-5">
           <h2 class="pb-2 border-bottom">Nuestros Servicios</h2>
 
           <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
@@ -128,7 +128,32 @@
                   </div>
               </div>
           </div>
-      </div>
+      </section>
+
+      <section class="album px-4 py-5 projects bg-light">
+          <div class="container">
+              <h2 class="pb-2 border-bottom">Nuestros Portfolio</h2>
+
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                  <div class="col">
+                      <div class="card shadow-sm projects-images">
+                          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                          <div class="card-body details">
+                              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                  <div class="btn-group">
+                                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  </div>
+                                  <small class="text-muted">9 mins</small>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
       <!-- Areas de GIT -->
 
       <!-- Apuntadores de GIT -->
@@ -142,17 +167,17 @@
 
       <!-- Repositorios -->
     <div class="social repo">
-        <a class="github" 
+        <a class="github"
             href="https://github.com/c215714n/git-mj18"
             target="_blank"
             title="GitHub">
         </a>
-        <a class="gitlab" 
+        <a class="gitlab"
             href="https://gitlab.com/c215714n/git-mj18"
             target="_blank"
             title="GitLab">
         </a>
-        <a class="bitbucket" 
+        <a class="bitbucket"
             href="https://bitbucket.org/c215714n/git-mj18"
             target="_blank"
             title="BitBucket">
