--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Redes sociales -->
 
         <!-- Derechos de Autor -->
-
+        <p class="mt-3 p-3 text-light bg-dark | text-center | opacity-75">&copy;2023 Todos los derechos reservados</p>
     </footer>
     <!-- Logica JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
