--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <!-- Redes sociales -->
 
         <!-- Derechos de Autor -->
-
+        <p class="mt-3 p-3 text-light bg-dark | text-center | opacity-75">&copy;2023 Todos los derechos reservados</p>
     </footer>
     <!-- Logica JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
