index.html: agregar contenido working directory

--- a/index.html
+++ b/index.html
@@ -130,7 +130,23 @@
             </div>
         </div>
         <!-- Areas de GIT -->
+        <section>
+            <h2>Areas de GIT</h2>
+            <article>
+                <h3>Working Directory</h3>
+                <p>
+                    El directorio de trabajo corresponde a la carpeta donde inicializamos el repositorio de git. Muy pocas veces vamos a estar utilizando la linea de comandos, ya que normalmente corresponde al area en la que se crean, editan y eliminar los archivos. Algunos de los comandos que podemos llegar a utilizar son los siguientes:
+                </p>
+                <ul class="list-group | m-3">
+                    <li class="list-group-item"><strong>dir || ls:</strong> muestra el contenido de la carpeta</li>
+                    <li class="list-group-item"><strong>mkdir &lt;name>: </strong>crea una carpeta con el nombre especificado</li>
+                    <li class="list-group-item"><strong>cd &lt;path>: </strong>abre la carpeta seleccionada</li>
+                    <li class="list-group-item"><strong>git init: </strong>inicializa un repositorio de git</li>
+                    <li class="list-group-item"><strong>rm -rf .git</strong> elimina el repositorio de git</li>
+                </ul>
+            </article>
 
+        </section>
         <!-- Apuntadores de GIT -->
 
         <!-- Control de Cambios -->
