index.html: agregar contenido staging area

--- a/index.html
+++ b/index.html
@@ -145,7 +145,19 @@
                     <li class="list-group-item"><strong>rm -rf .git</strong> elimina el repositorio de git</li>
                 </ul>
             </article>
-
+            <article>
+                <h3>Staging Area (INDEX)</h3>
+                <p>
+                    El area de control de cambios se utiliza para identificar los archivos a los que vamos a hacerle seguimiento, aqui realizamos las capturas de codigo, que luego deberan ser confirmadas para formar parte del historial de confirmaciones. Entre los camandos a utilizar se encuentran
+                </p>
+                <ul class="list-group | m-3">
+                    <li class="list-group-item"><strong>git status: </strong> muestra el estado de los archivos con respecto al INDEX</li>
+                    <li class="list-group-item"><strong>git add &lt;file>: </strong> realiza la captura (snapshot) de los archivos seleccionados</li>
+                    <li class="list-group-item"><strong>git diff: </strong> compara el Working Directory con el Staging Area</li>
+                    <li class="list-group-item"><strong>git restore --staged &lt;file> </strong>elimina la ultima captura realizada del archivo seleccionado</li>
+                    <li class="list-group-item"><strong>git rm --cached &lt;file></strong> elimina del repositorio las captura del archivo seleccionado</li>
+                </ul>
+            </article>
         </section>
         <!-- Apuntadores de GIT -->
 
