estructura: crear encabezado con Bootstrap

--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
 </head>
 <body>
     <!-- Cabecera de Pagina -->
-    <header id="header">
+    <header id="header" class="position-relative | vh-100 | text-light bg-dark bg-gradient">
         <!-- Encabezado -->
-
+        <div class="position-absolute top-50 start-50 translate-middle | text-center">
+            <h1 class="display-1 fw-bold">GIT</h1>
+            <p class="h1 text-uppercase"> Desarrollo Colaborativo </p>
+        </div>
         <!-- Galeria -->
 
     </header>
